feature: ponteiros rotacionam de acordo com a hora

--- a/index.html
+++ b/index.html
@@ -18,25 +18,32 @@
       
       <div class="containerDigital">
         <div class="horaDigital">
+          <p class="turno"></p>
           <h1 class="hora"></h1>
         </div>
         <div class="minutoDigital">
           <h1 class="minuto"></h1>
         </div>
       </div>
-  
-      <!-- <div class="contButton">
-        <button class="antPainel">prev</button>
-        <button class="proxPainel">next</button>
-      </div> -->
-      <div class="contButton">
-        <button class="antPainel">Prev</button>
-        <button class="proxPainel">Next</button>
-    </div>
+
+      <div class="contAnt">
+        <button class="antPainel"><</button>
+      </div>
+      <div class="contProx">
+        <button class="proxPainel">/></button>
+      </div>
   
   
       <div class="containerAnalogico">
         <div class="relogioAnalogico">
+          <div class="numHorizontal"> 
+            <p>9</p>
+            <p>3</p>
+          </div>
+          <div class="numVertical">
+            <p>12</p>
+            <p>6</p>
+          </div>
           <div class="segundoAnal"></div>
           <div class="minutoAnal"></div>
           <div class="horaAnal"></div>
