--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -53,6 +54,6 @@
   </section>
 
 
-  <!-- <footer>&copy; yohanesz</footer> -->
+  <footer>&copy; yohanesz</footer>
 </body>
 </html>
